# squirrel-core

./: Dockerfile  README.md  README.zh_CN.md  alembic.ini  core.env  docker-compose.yaml  pyproject.toml  pytest.Dockerfile  requirements.dev.txt  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 5943f699f2bf_create_meta_table.py  9ed5b089015e_create_task_table.py
docs/: Collector Design.md  Storage Design.md  System Design.v1.md  System Design.v2.md
scripts/: poetry-sync.bat  poetry-sync.sh
squirrel_core/: __init__.py  app.py  config.py  hooks.py  main.py  schema.py
squirrel_core/api/: __init__.py  echo.py
squirrel_core/collector/: __init__.py  flow.py  hookspec.py  router.py  schema.py
squirrel_core/storage/: flow.py
squirrel_core/utils/: merge.py
src/api/: __init__.py
src/squirrel_core/: __init__.py
templates/collector/: input.html
tests/: test_squirrel_core.py
tests/utils/: test_merge.py
