[tool.poetry]
name = "squirrel-core"
version = "0.1.0"
description = ""
authors = ["Whale Mo <ncwhale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.79.0"}
Jinja2 = "^3.1.2"
meilisearch = "^0.19.0"
pluggy = "^1.0.0"
MarkupSafe = "^2.1.1"
hypercorn = "^0.13.2"
trio = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "squirrel_core:run"